# Job_platform_BE

./: .env.example  README.md  pyproject.toml  pytest.ini
job_platform/: api.py  asgi.py  settings.py  urls.py  wsgi.py
jobs/: api.py  models.py  schemas.py
jobs/migrations/: 0001_initial.py  0002_jobposting_create_date_jobposting_updated_date_and_more.py  0003_rename_create_date_jobposting_create_at_and_more.py  0004_rename_create_at_jobposting_created_at.py
tests/: conftest.py  test_auth.py  test_job.py
tests/data/: job_data.json
